modules/vpc/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.cidr_block
  tags = {
    Name = "${var.environment_name}-vpc"
  }
}
